# MlLearning

./: Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac  helloWorld.cpp
lossFunctions/: Loss.hpp
minWithoutConstrains/: GradientDescent.hpp
src/: optimizer.cc
src/common/: DataSet.hpp  Sample.hpp
src/lossFunctions/: LogitLoss.hpp  Loss.hpp  SquareLoss.hpp
src/minWithoutConstrains/: GradientDescent.cpp  GradientDescent.hpp
