## Helloworld C++: an example project using Automake

AC_INIT([Helloworld C++], [0.5], [wenke.bj@gmail.com],
        [optmizer_cc], [http://www.kevinnote.com])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
